#206 improvements to the embedded java documentation. #205 menu in menu improvements.